Fix folder list column horizontal scrolling when small

--- a/app/components/Workspace.scss
+++ b/app/components/Workspace.scss
@@ -53,7 +53,6 @@
 
 #tabContainer {
   flex: 1; //grow to fill as much as is can (up to edge of notification bar)
-  overflow-x: hidden; // don't scroll it
 }
 #topLevelOfOpenProjectScreen {
   display: flex;
